--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
               <span class="text-secondary">Email:</span> salihouridwyn@gmail.com
             </div>
             <div>
-                    <span class="text-secondary">Phone:</span> 07745632145
+                    <span class="text-secondary">Phone:</span> +447739068234
                 </div>
                 <div>
                         <span class="text-secondary">Address:</span> St. Georges Avenue Northampton
