--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,9 @@
 
       <div class="boxes">
           <div>
-              <span class="text-secondary">Email: </span> salihouridwyn@gmail.com
+              <a href="mailto:salihouridwyn@gmail.com" target="_blank">
+              <span class="text-secondary">Email: </span> salihouridwyn@gmail.com </a>
+            </a>
             </div>
             <div>
                     <span class="text-secondary">Phone:</span> +447739068234
