--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="links">
         <a href=""><i class="fa fa-twitter fa-2x"></i></a>
         <a href=""><i class="fa fa-linkedin fa-2x"></i></a>
-        <a href=""><i class="fa fa-github fa-2x"></i></a>
+        <a href="https://github.com/Ridwyn"><i class="fa fa-github fa-2x"></i></a>
       </div>
     </main>
 
