--- a/about.html
+++ b/about.html
@@ -83,11 +83,13 @@
 
                           <h3>Back-End</h3>
                           <ul>
+                            <li>Node.js(Express)</li>
                             <li>Flask</li>
+                            <li>Slim(PHP)</li>
                             <li>MongoDB</li>
                             <li>MySQL</li>
                             <li>Firebase</li>
-                            <li>API</li>
+                            <li>API Integrations</li>
                           </ul>
                       </div>                      
                   </div>
