--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
                     <span class="text-secondary">Phone:</span> +447739068234
                 </div>
                 <div>
-                        <span class="text-secondary">Address:</span> St. Georges Avenue Northampton
+                  Drop me a mail let's for further enquiries.
                 </div>
       </div>
 
