--- a/projects.html
+++ b/projects.html
@@ -68,6 +68,11 @@
             <a href="https://ridwyn.github.io/MovieApi/" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
             <a href="https://github.com/Ridwyn/MovieApi" class="btn dark"><i class="fa fa-github"></i> Github</a>
         </div>
+        <div class="item">
+          <a href="https://ridwyn.github.io/#/"> <img src="img/myprojects/project6.png" alt="Projects"></a>
+          <a href="https://ridwyn.github.io/#/" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
+          <a href="https://github.com/Ridwyn/ridwyn.github.io" class="btn dark"><i class="fa fa-github"></i> Github</a>
+      </div>
       </div>
 
 
