--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
                     <span class="text-secondary">Phone:</span> +447739068234
                 </div>
                 <div>
-                  Drop me a mail let's for further enquiries.
+                  Get in touch lets work together. Looking for code mates to work on projects and share ideas
                 </div>
       </div>
 
