--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
         Ridwyn <span class="text-secondary">Idrissou</span>
       </h1>
       <h2 class="sm-heading">Web Developer, Programmer & Designer</h2>
-      <div class="links">
-        <a href=""><i class="fa fa-twitter fa-2x"></i></a>
-        <a href=""><i class="fa fa-linkedin fa-2x"></i></a>
+      <div class="links">        
+        <a href="https://www.linkedin.com/in/ridwyn/"><i class="fa fa-linkedin fa-2x"></i></a>
         <a href="https://github.com/Ridwyn"><i class="fa fa-github fa-2x"></i></a>
       </div>
     </main>
