--- a/projects.html
+++ b/projects.html
@@ -43,15 +43,22 @@
       <h2 class="sm-heading">View my projects...</h2>
 
       <div class="projects-info">
+          <div class="item">
+              <a href="https://ridwyn.github.io/MovieVue/"> <img src="img/myprojects/project5.png" alt="Projects"></a>
+              <a href="https://ridwyn.github.io/MovieVue/" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
+              <a href="https://github.com/Ridwyn/MovieVue" class="btn dark"><i class="fa fa-github"></i> Github</a>
+          </div>
         <div class="item">
             <a href="https://microblog2019.herokuapp.com/"> <img src="img/myprojects/project1.png" alt="Projects"></a>
             <a href="https://microblog2019.herokuapp.com/" class="btn light"><i class="fa fa-eye"></i> Live Demo</a>
             <a href="https://github.com/Ridwyn/MicroBlog_flask_mongodb" class="btn dark"><i class="fa fa-github"></i> Github</a>
         </div>
         <div class="item">
-                <a href="https://ridwyn.github.io/TravelAgencyTheme/"> <img src="img/myprojects/project2.png" alt="Projects"></a>
-                <a href="https://ridwyn.github.io/TravelAgencyTheme/" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
-                <a href="https://github.com/Ridwyn/TravelAgencyTheme" class="btn dark"><i class="fa fa-github"></i> Github</a>
+                <a href="https://ridwyn.github.io/TravelAgencyTheme/">
+                   <img src="img/myprojects/project2.png" alt="Projects">
+                  </a>               
+                        <a href="https://ridwyn.github.io/TravelAgencyTheme/" class="btn light"><i class="fa fa-eye"></i> Live Demo</a>
+                        <a href="https://github.com/Ridwyn/TravelAgencyTheme" class="btn dark"><i class="fa fa-github"></i> Github</a>                       
             </div>
             <div class="item">
                     <a href="https://ridwyn.github.io/restauranttheme/"> <img src="img/myprojects/project3.png" alt="Projects"></a>
@@ -63,11 +70,7 @@
                         <a href="https://ridwyn.github.io/LeaftletMapApi/" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
                         <a href="https://github.com/Ridwyn/LeaftletMapApi" class="btn dark"><i class="fa fa-github"></i> Github</a>
                     </div>
-                    <div class="item">
-            <a href="https://ridwyn.github.io/MovieApi/"> <img src="img/myprojects/project5.png" alt="Projects"></a>
-            <a href="https://ridwyn.github.io/MovieApi/" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
-            <a href="https://github.com/Ridwyn/MovieApi" class="btn dark"><i class="fa fa-github"></i> Github</a>
-        </div>
+
         <div class="item">
           <a href="https://ridwyn.github.io/#/"> <img src="img/myprojects/project6.png" alt="Projects"></a>
           <a href="https://ridwyn.github.io/#/" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
