--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="Description" content="Contact ridwyn salihou idrissou, create website">
+    <meta name="robots" content="index, follow">
+    <meta property="og:type" content="email" />
+    <meta property="og:title" content="contact info" />
     <link rel="stylesheet" href="css/main.css" />
     <link
       rel="stylesheet"
