--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="google-site-verification" content="mE17NA4Xa5O5fL34b3TGFhd5er-Ep4ocHFdqZn3yWCg" />
+    <meta name="Description" content="webdev, frontend developer, web developer, software developer, freelance">
+    <meta name="robots" content="index, follow">
+    <meta property="og:type" content="webdev" />
+    <meta property="og:title" content="ridwyn" />
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
