--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="Description" content="Author: ridwyn rdrissou,
+    Projects:moviesearch,geocoding,Restaurant theme, travel theme, microblog">
+    <meta name="robots" content="index, follow">
+    <meta property="og:type" content="webapps" />
+    <meta property="og:title" content="Web Projects" />
     <link rel="stylesheet" href="css/main.css" />
     <link
       rel="stylesheet"
@@ -44,35 +49,69 @@
 
       <div class="projects-info">
           <div class="item">
-              <a href="https://ridwyn.github.io/MovieVue/"> <img src="img/myprojects/project5.png" alt="Projects"></a>
+              <a href="https://ridwyn.github.io/MovieVue/"> 
+                <picture>
+                  <source srcset="img/myprojects/project5.webp" type="image/webp">
+                  <source srcset="img/myprojects/project5.png" type="image/png"> 
+                  <img src="img/myprojects/project5.png" alt="Alt Text!">
+                </picture>
+              </a>
               <a href="https://ridwyn.github.io/MovieVue/" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
               <a href="https://github.com/Ridwyn/MovieVue" class="btn dark"><i class="fa fa-github"></i> Github</a>
           </div>
         <div class="item">
-            <a href="https://microblog2019.herokuapp.com/"> <img src="img/myprojects/project1.png" alt="Projects"></a>
+            <a href="https://microblog2019.herokuapp.com/">
+              <picture>
+                <source srcset="img/myprojects/project1.webp" type="image/webp">
+                <source srcset="img/myprojects/project1.png" type="image/png"> 
+                <img src="img/myprojects/project1.png" alt="Alt Text!">
+              </picture>              
+              </a>
             <a href="https://microblog2019.herokuapp.com/" class="btn light"><i class="fa fa-eye"></i> Live Demo</a>
             <a href="https://github.com/Ridwyn/MicroBlog_flask_mongodb" class="btn dark"><i class="fa fa-github"></i> Github</a>
         </div>
         <div class="item">
                 <a href="https://ridwyn.github.io/TravelAgencyTheme/">
-                   <img src="img/myprojects/project2.png" alt="Projects">
+                  <picture>
+                    <source srcset="img/myprojects/project2.webp" type="image/webp">
+                    <source srcset="img/myprojects/project2.png" type="image/png"> 
+                    <img src="img/myprojects/project2.png" alt="Alt Text!">
+                  </picture>
                   </a>               
                         <a href="https://ridwyn.github.io/TravelAgencyTheme/" class="btn light"><i class="fa fa-eye"></i> Live Demo</a>
                         <a href="https://github.com/Ridwyn/TravelAgencyTheme" class="btn dark"><i class="fa fa-github"></i> Github</a>                       
             </div>
             <div class="item">
-                    <a href="https://ridwyn.github.io/restauranttheme/"> <img src="img/myprojects/project3.png" alt="Projects"></a>
+                    <a href="https://ridwyn.github.io/restauranttheme/"> 
+                      <picture>
+                        <source srcset="img/myprojects/project3.webp" type="image/webp">
+                        <source srcset="img/myprojects/project3.png" type="image/png"> 
+                        <img src="img/myprojects/project3.png" alt="Alt Text!">
+                      </picture>
+                    </a>
                   <a href="https://ridwyn.github.io/restauranttheme/" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
                     <a href="https://github.com/Ridwyn/restauranttheme" class="btn dark"><i class="fa fa-github"></i> Github</a>
                   </div>
                 <div class="item">
-                        <a href="https://ridwyn.github.io/LeaftletMapApi/"> <img src="img/myprojects/project4.png" alt="Projects"></a>
+                        <a href="https://ridwyn.github.io/LeaftletMapApi/"> 
+                          <picture>
+                            <source srcset="img/myprojects/project4.webp" type="image/webp">
+                            <source srcset="img/myprojects/project4.png" type="image/png"> 
+                            <img src="img/myprojects/project4.png" alt="Alt Text!">
+                          </picture>
+                        </a>
                         <a href="https://ridwyn.github.io/LeaftletMapApi/" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
                         <a href="https://github.com/Ridwyn/LeaftletMapApi" class="btn dark"><i class="fa fa-github"></i> Github</a>
                     </div>
 
         <div class="item">
-          <a href="https://ridwyn.github.io/#/"> <img src="img/myprojects/project6.png" alt="Projects"></a>
+          <a href="https://ridwyn.github.io/#/">
+            <picture>
+              <source srcset="img/myprojects/project6.webp" type="image/webp">
+              <source srcset="img/myprojects/project6.png" type="image/png"> 
+              <img src="img/myprojects/project6.png" alt="Alt Text!">
+            </picture>
+            </a>
           <a href="https://ridwyn.github.io/#/" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
           <a href="https://github.com/Ridwyn/ridwyn.github.io" class="btn dark"><i class="fa fa-github"></i> Github</a>
       </div>
