--- a/contact.html
+++ b/contact.html
@@ -72,6 +72,6 @@
     
   
     <!-- LINK TO JAVASCRIPT -->
-    <script src="js/main.js"></script>
+    <script async src="js/main.js"></script>
   </body>
 </html>
