--- a/projects.html
+++ b/projects.html
@@ -127,6 +127,6 @@
 
   </div>
     <!-- LINK TO JAVASCRIPT -->
-    <script src="js/main.js"></script>
+    <script async src="js/main.js"></script>
   </body>
 </html>
