--- a/about.html
+++ b/about.html
@@ -107,6 +107,6 @@
 
 
   <!-- LINK TO JAVASCRIPT -->
-    <script src="js/main.js"></script>
+    <script async src="js/main.js"></script>
   </body>
 </html>
