--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
     </main>
 
     <!-- LINK TO JAVASCRIPT -->
-    <script src="js/main.js"></script>
+    <script async src="js/main.js"></script>
   </body>
 </html>
