--- a/projects.html
+++ b/projects.html
@@ -32,10 +32,10 @@
         </div>
        <div>
         <ul class="menu-nav">
-          <li class="nav-item"><a href="/index.html" >Home</a></li>
-          <li class="nav-item"><a href="/about.html" >About Me</a></li>
-          <li class="nav-item"><a href="/projects.html" class="active">Projects</a></li>
-          <li class="nav-item"><a href="/contact.html">Get In Touch</a></li>
+          <li class="nav-item"><a href="/index.html" aria-label="Home">Home</a></li>
+          <li class="nav-item"><a href="/about.html" aria-label="About me">About Me</a></li>
+          <li class="nav-item"><a href="/projects.html" aria-label="Projects" class="active">Projects</a></li>
+          <li class="nav-item"><a href="/contact.html" aria-label="Contact">Get In Touch</a></li>
         
         </div>
       </nav>
@@ -49,71 +49,71 @@
 
       <div class="projects-info">
           <div class="item">
-              <a href="https://ridwyn.github.io/MovieVue/"> 
+              <a href="https://ridwyn.github.io/MovieVue/" aria-label="LiveDemo"> 
                 <picture>
                   <source srcset="img/myprojects/project5.webp" type="image/webp">
                   <source srcset="img/myprojects/project5.png" type="image/png"> 
                   <img src="img/myprojects/project5.png" alt="Alt Text!">
                 </picture>
               </a>
-              <a href="https://ridwyn.github.io/MovieVue/" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
-              <a href="https://github.com/Ridwyn/MovieVue" class="btn dark"><i class="fa fa-github"></i> Github</a>
+              <a href="https://ridwyn.github.io/MovieVue/" aria-label="Livedemo" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
+              <a href="https://github.com/Ridwyn/MovieVue" aria-label="Github" class="btn dark"><i class="fa fa-github"></i> Github</a>
           </div>
         <div class="item">
-            <a href="https://microblog2019.herokuapp.com/">
+            <a href="https://microblog2019.herokuapp.com/" aria-label="LiveDemo" >
               <picture>
                 <source srcset="img/myprojects/project1.webp" type="image/webp">
                 <source srcset="img/myprojects/project1.png" type="image/png"> 
                 <img src="img/myprojects/project1.png" alt="Alt Text!">
               </picture>              
               </a>
-            <a href="https://microblog2019.herokuapp.com/" class="btn light"><i class="fa fa-eye"></i> Live Demo</a>
-            <a href="https://github.com/Ridwyn/MicroBlog_flask_mongodb" class="btn dark"><i class="fa fa-github"></i> Github</a>
+            <a href="https://microblog2019.herokuapp.com/" aria-label="Livedemo"  class="btn light"><i class="fa fa-eye"></i> Live Demo</a>
+            <a href="https://github.com/Ridwyn/MicroBlog_flask_mongodb" aria-label="Github" class="btn dark"><i class="fa fa-github"></i> Github</a>
         </div>
         <div class="item">
-                <a href="https://ridwyn.github.io/TravelAgencyTheme/">
+                <a href="https://ridwyn.github.io/TravelAgencyTheme/"aria-label="LiveDemo">
                   <picture>
                     <source srcset="img/myprojects/project2.webp" type="image/webp">
                     <source srcset="img/myprojects/project2.png" type="image/png"> 
                     <img src="img/myprojects/project2.png" alt="Alt Text!">
                   </picture>
                   </a>               
-                        <a href="https://ridwyn.github.io/TravelAgencyTheme/" class="btn light"><i class="fa fa-eye"></i> Live Demo</a>
-                        <a href="https://github.com/Ridwyn/TravelAgencyTheme" class="btn dark"><i class="fa fa-github"></i> Github</a>                       
+                        <a href="https://ridwyn.github.io/TravelAgencyTheme/"aria-label="Livedemo" class="btn light"><i class="fa fa-eye"></i> Live Demo</a>
+                        <a href="https://github.com/Ridwyn/TravelAgencyTheme"aria-label="Github" class="btn dark"><i class="fa fa-github"></i> Github</a>                       
             </div>
             <div class="item">
-                    <a href="https://ridwyn.github.io/restauranttheme/"> 
+                    <a href="https://ridwyn.github.io/restauranttheme/"aria-label="LiveDemo"> 
                       <picture>
                         <source srcset="img/myprojects/project3.webp" type="image/webp">
                         <source srcset="img/myprojects/project3.png" type="image/png"> 
                         <img src="img/myprojects/project3.png" alt="Alt Text!">
                       </picture>
                     </a>
-                  <a href="https://ridwyn.github.io/restauranttheme/" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
-                    <a href="https://github.com/Ridwyn/restauranttheme" class="btn dark"><i class="fa fa-github"></i> Github</a>
+                  <a href="https://ridwyn.github.io/restauranttheme/"aria-label="Livedemo" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
+                    <a href="https://github.com/Ridwyn/restauranttheme"aria-label="Github" class="btn dark"><i class="fa fa-github"></i> Github</a>
                   </div>
                 <div class="item">
-                        <a href="https://ridwyn.github.io/LeaftletMapApi/"> 
+                        <a href="https://ridwyn.github.io/LeaftletMapApi/"aria-label="LiveDemo"> 
                           <picture>
                             <source srcset="img/myprojects/project4.webp" type="image/webp">
                             <source srcset="img/myprojects/project4.png" type="image/png"> 
                             <img src="img/myprojects/project4.png" alt="Alt Text!">
                           </picture>
                         </a>
-                        <a href="https://ridwyn.github.io/LeaftletMapApi/" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
-                        <a href="https://github.com/Ridwyn/LeaftletMapApi" class="btn dark"><i class="fa fa-github"></i> Github</a>
+                        <a href="https://ridwyn.github.io/LeaftletMapApi/"aria-label="Livedemo" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
+                        <a href="https://github.com/Ridwyn/LeaftletMapApi"aria-label="Github" class="btn dark"><i class="fa fa-github"></i> Github</a>
                     </div>
 
         <div class="item">
-          <a href="https://ridwyn.github.io/#/">
+          <a href="https://ridwyn.github.io/#/"aria-label="LiveDemo">
             <picture>
               <source srcset="img/myprojects/project6.webp" type="image/webp">
               <source srcset="img/myprojects/project6.png" type="image/png"> 
               <img src="img/myprojects/project6.png" alt="Alt Text!">
             </picture>
             </a>
-          <a href="https://ridwyn.github.io/#/" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
-          <a href="https://github.com/Ridwyn/ridwyn.github.io" class="btn dark"><i class="fa fa-github"></i> Github</a>
+          <a href="https://ridwyn.github.io/#/"aria-label="Livedemo" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
+          <a href="https://github.com/Ridwyn/ridwyn.github.io"aria-label="Github" class="btn dark"><i class="fa fa-github"></i> Github</a>
       </div>
       </div>
 
