--- a/about.html
+++ b/about.html
@@ -28,10 +28,10 @@
         </div>
        <div>
         <ul class="menu-nav">
-          <li class="nav-item"><a href="/index.html" >Home</a></li>
-          <li class="nav-item"><a href="/about.html" class="active">About Me</a></li>
-          <li class="nav-item"><a href="/projects.html">Projects</a></li>
-          <li class="nav-item"><a href="/contact.html">Get In Touch</a></li>
+          <li class="nav-item"><a href="/index.html" aria-label="Home" >Home</a></li>
+          <li class="nav-item"><a href="/about.html" aria-label="About" class="active">About Me</a></li>
+          <li class="nav-item"><a href="/projects.html" aria-label="Projects">Projects</a></li>
+          <li class="nav-item"><a href="/contact.html" aria-label="Contact">Get In Touch</a></li>
         
         </div>
       </nav>
