--- a/contact.html
+++ b/contact.html
@@ -32,10 +32,10 @@
         </div>
        
         <ul class="menu-nav">
-          <li class="nav-item"><a href="/index.html" >Home</a></li>
-          <li class="nav-item"><a href="/about.html" >About Me</a></li>
-          <li class="nav-item"><a href="/projects.html">Projects</a></li>
-          <li class="nav-item"><a href="/contact.html" class="active">Get In Touch</a></li>
+          <li class="nav-item"><a href="/index.html" aria-label="Home" >Home</a></li>
+          <li class="nav-item"><a href="/about.html" aria-label="About" >About Me</a></li>
+          <li class="nav-item"><a href="/projects.html"aria-label="Projects" >Projects</a></li>
+          <li class="nav-item"><a href="/contact.html" aria-label="Contact" class="active">Get In Touch</a></li>
       </nav>
     </header>
     <!-- MAIN CONTENT -->
