--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </div>
        <div>
         <ul class="menu-nav">
-          <li class="nav-item"><a href="/index.html" class="active">Home</a></li>
-          <li class="nav-item"><a href="/about.html">About Me</a></li>
-          <li class="nav-item"><a href="/projects.html">Projects</a></li>
-          <li class="nav-item"><a href="/contact.html">Get In Touch</a></li>
+          <li class="nav-item"><a href="/index.html" aria-label="Home" class="active">Home</a></li>
+          <li class="nav-item"><a href="/about.html" aria-label="About Me">About Me</a></li>
+          <li class="nav-item"><a href="/projects.html" aria-label="Projects">Projects</a></li>
+          <li class="nav-item"><a href="/contact.html" aria-label="Contact">Get In Touch</a></li>
         
         </div>
       </nav>
@@ -49,8 +49,8 @@
       </h1>
       <h2 class="sm-heading">Web Developer, Programmer & Designer</h2>
       <div class="links">        
-        <a href="https://www.linkedin.com/in/ridwyn/"><i class="fa fa-linkedin fa-2x"></i></a>
-        <a href="https://github.com/Ridwyn"><i class="fa fa-github fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/ridwyn/"aria-label="LinkedIn"><i class="fa fa-linkedin fa-2x"></i></a>
+        <a href="https://github.com/Ridwyn" aria-label="Github"><i class="fa fa-github fa-2x"></i></a>
       </div>
     </main>
 
