--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
               <p> I mostly create interactive websites from the Front-End. If you are interested in developing web technologies I would be open to work with you on it
                   I also create Web UI and if you need a website you landed on the right page.
                 I develop on the back-end with added functionality. </p>
-              <p>Currently studying for my Bsc. Computer Science. Love to Watch Movies and a huge music fan</p>
+              <p>Currently building a mini "CRUD" for employee management with the (MERN) stack. Love to Watch Movies and a huge music fan</p>
 
             </div>
         </div>
