--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,7 @@
     <meta name="robots" content="index, follow">
     <meta property="og:type" content="webapps" />
     <meta property="og:title" content="Web Projects" />
+    <!-- CSS only -->
     <link rel="stylesheet" href="css/main.css" />
     <link
       rel="stylesheet"
@@ -43,76 +44,13 @@
       </h1>
       <h2 class="sm-heading">View my projects...</h2>
 
-      <div class="projects-info">
-          <div class="item">
-              <a href="https://ridwyn.github.io/MovieVue/" aria-label="LiveDemo"> 
-                <picture>
-                  <source srcset="img/myprojects/project5.webp" type="image/webp">
-                  <source srcset="img/myprojects/project5.png" type="image/png"> 
-                  <img src="img/myprojects/project5.png" alt="Alt Text!">
-                </picture>
-              </a>
-              <a href="https://ridwyn.github.io/MovieVue/" aria-label="Livedemo" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
-              <a href="https://github.com/Ridwyn/MovieVue" aria-label="Github" class="btn dark"><i class="fa fa-github"></i> Github</a>
-          </div>
-        <div class="item">
-            <a href="https://microblog2019.herokuapp.com/" aria-label="LiveDemo" >
-              <picture>
-                <source srcset="img/myprojects/project1.webp" type="image/webp">
-                <source srcset="img/myprojects/project1.png" type="image/png"> 
-                <img src="img/myprojects/project1.png" alt="Alt Text!">
-              </picture>              
-              </a>
-            <a href="https://microblog2019.herokuapp.com/" aria-label="Livedemo"  class="btn light"><i class="fa fa-eye"></i> Live Demo</a>
-            <a href="https://github.com/Ridwyn/MicroBlog_flask_mongodb" aria-label="Github" class="btn dark"><i class="fa fa-github"></i> Github</a>
-        </div>
-        <div class="item">
-                <a href="https://ridwyn.github.io/TravelAgencyTheme/"aria-label="LiveDemo">
-                  <picture>
-                    <source srcset="img/myprojects/project2.webp" type="image/webp">
-                    <source srcset="img/myprojects/project2.png" type="image/png"> 
-                    <img src="img/myprojects/project2.png" alt="Alt Text!">
-                  </picture>
-                  </a>               
-                        <a href="https://ridwyn.github.io/TravelAgencyTheme/"aria-label="Livedemo" class="btn light"><i class="fa fa-eye"></i> Live Demo</a>
-                        <a href="https://github.com/Ridwyn/TravelAgencyTheme"aria-label="Github" class="btn dark"><i class="fa fa-github"></i> Github</a>                       
-            </div>
-            <div class="item">
-                    <a href="https://ridwyn.github.io/restauranttheme/"aria-label="LiveDemo"> 
-                      <picture>
-                        <source srcset="img/myprojects/project3.webp" type="image/webp">
-                        <source srcset="img/myprojects/project3.png" type="image/png"> 
-                        <img src="img/myprojects/project3.png" alt="Alt Text!">
-                      </picture>
-                    </a>
-                  <a href="https://ridwyn.github.io/restauranttheme/"aria-label="Livedemo" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
-                    <a href="https://github.com/Ridwyn/restauranttheme"aria-label="Github" class="btn dark"><i class="fa fa-github"></i> Github</a>
-                  </div>
-                <div class="item">
-                        <a href="https://ridwyn.github.io/LeaftletMapApi/"aria-label="LiveDemo"> 
-                          <picture>
-                            <source srcset="img/myprojects/project4.webp" type="image/webp">
-                            <source srcset="img/myprojects/project4.png" type="image/png"> 
-                            <img src="img/myprojects/project4.png" alt="Alt Text!">
-                          </picture>
-                        </a>
-                        <a href="https://ridwyn.github.io/LeaftletMapApi/"aria-label="Livedemo" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
-                        <a href="https://github.com/Ridwyn/LeaftletMapApi"aria-label="Github" class="btn dark"><i class="fa fa-github"></i> Github</a>
-                    </div>
+      <h3>WebApps</h3>
+      <section class="projects-info webapps">
+      </section>
 
-        <div class="item">
-          <a href="https://ridwyn.github.io/#/"aria-label="LiveDemo">
-            <picture>
-              <source srcset="img/myprojects/project6.webp" type="image/webp">
-              <source srcset="img/myprojects/project6.png" type="image/png"> 
-              <img src="img/myprojects/project6.png" alt="Alt Text!">
-            </picture>
-            </a>
-          <a href="https://ridwyn.github.io/#/"aria-label="Livedemo" class="btn light"><i class="fa fa-eye"></i>  Live Demo</a>
-          <a href="https://github.com/Ridwyn/ridwyn.github.io"aria-label="Github" class="btn dark"><i class="fa fa-github"></i> Github</a>
-      </div>
-      </div>
-
+        <h3>Extensions</h3>
+      <section class="projects-info extensions">
+      </section>
 
     </main>
 
