--- a/about.html
+++ b/about.html
@@ -97,8 +97,9 @@
     </main>
       <!-- FOOTER -->
       <footer id="main-footer">
-          Copyright &copy; 2019
-      </footer>
+        Copyright &copy; 2019
+        <span> <a href="/privacy_policy.html" class="text-secondary">Privacy Policy</a></span>
+    </footer>
     </div>
 
 
