--- a/projects.html
+++ b/projects.html
@@ -57,6 +57,7 @@
      <!-- FOOTER -->
      <footer id="main-footer">
         Copyright &copy; 2019
+        <span> <a href="/privacy_policy.html" class="text-secondary">Privacy Policy</a></span>
     </footer>
 
   </div>
