--- a/contact.html
+++ b/contact.html
@@ -48,9 +48,7 @@
               <span class="text-secondary">Email: </span> salihouridwyn@gmail.com </a>
             </a>
             </div>
-            <div>
-                    <span class="text-secondary">Phone:</span> +447739068234
-                </div>
+            
                 <div>
                   Get in touch lets work together. Looking for code mates to work on projects and share ideas
                 </div>
@@ -63,8 +61,9 @@
 
            <!-- FOOTER -->
            <footer id="main-footer">
-              Copyright &copy; 2019
-          </footer>
+            Copyright &copy; 2019
+            <span> <a href="/privacy_policy.html" class="text-secondary">Privacy Policy</a></span>
+        </footer>
 </div>
     
   
